adjusted width of picture gallery to fix horizontal overflow in macos firefox

--- a/client/src/components/Letterboxc/LetterboxcContainer/LetterboxcContainer.module.css
+++ b/client/src/components/Letterboxc/LetterboxcContainer/LetterboxcContainer.module.css
@@ -46,7 +46,7 @@
   cursor: pointer;
   font-size: 16px;
   text-decoration: none;
-  right: 20px;
+  right: 17px;
   top: 8px;
 }
 
