--- a/client/src/components/Letterboxc/PictureGallery/PictureGallery.module.css
+++ b/client/src/components/Letterboxc/PictureGallery/PictureGallery.module.css
@@ -2,7 +2,7 @@
   padding-left: 20px;
   padding-right: 20px;
   overflow-y: auto;
-  width: 905px;
+  width: 907px;
 }
 
 /* scrollbar styling. these should probably be in their own css file but im not gonna do it ahahaha */
